--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-world",
+  "name": "transport-canada-alexa-skill",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "ask-sdk-core": "^2.0.0",
     "ask-sdk-model": "^1.0.0"
