--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ask-sdk-core": "^2.0.0",
     "ask-sdk-model": "^1.0.0",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "node-fetch": "^2.2.0"
   }
 }
